##################################################
###                                            ###
###               SUBDIRECTORIES               ###
###                                            ###
##################################################

add_subdirectory (helplib)
add_subdirectory (types)
#add_subdirectory (solver)
#add_subdirectory (assembler)
#add_subdirectory (dataprocessing)
