##################################################
###                                            ###
###                  COMPILER                  ###
###                                            ###
##################################################

# some flags for C++ code
list (APPEND CMAKE_CXX_FLAGS "-std=c++11")

##################################################
###                                            ###
###                  LIBRARY                   ###
###                                            ###
##################################################

file (GLOB SOURCES "*.cpp")
add_library (TYPELIB ${SOURCES})
